--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "joi": "^17.9.2"
   },
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
